fix: fixed wrapping around img elements for headings and lists

--- a/src/styles/pages/Lessons/components/textEditor.css
+++ b/src/styles/pages/Lessons/components/textEditor.css
@@ -131,14 +131,13 @@
     outline: none;
     box-shadow: 0 0 0 3px rgba(100, 149, 237, 0.5);
   }
-  p.editor-paragraph {
+  p.editor-paragraph, h1.editor-heading-h1, h2.editor-heading-h2, ul.editor-list-ul, ol.editor-list-ol {
     text-align: start;
-
 
     span.editor-image {
       float: left;
-      margin-right: 8px;
-      margin-bottom: 4px;
+      margin-right: 0.5rem;
+      margin-bottom: 0.25rem;
 
       img {
         display: block;
